# quiet-rack

./: .gitignore  AGENTS.md  CONTRIBUTING.md  DEBUGGING.md  README.md  environment.yml  pyproject.toml  rack_fan_guide_1.docx  rack_fan_guide_1.md
.claude/session-logs/: 2026-03-26-1500-full-build.md
docs/: blog-outline.md  pid_tuning.md
homeassistant/: automation_backup_fan.yaml  automation_fan_failure_alert.yaml  automation_force_sensor_update.yaml  automation_pid_output_to_helper.yaml  automation_pid_to_mqtt.yaml  mqtt.yaml
pi/: config.example.yaml  fan-controller.service  fan_controller.py
tests/: config_test.yaml  conftest.py  tach_simulator.py  test_edge_cases.py  test_fan_conditions.py  test_fan_logic.py  test_full_stack.py  test_mqtt_integration.py  test_pid_simulation.py  test_pigpio_hw.py  test_resilience.py  test_tach_simulator.py
tests/fixtures/: vault_temp_history.csv
tools/: mqtt_debug.py
